--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,45 @@
 			<version>18.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito-common</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-core -->
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-core</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -51,7 +90,7 @@
 						</descriptorRefs>
 						<archive>
 							<manifest>
-								<mainClass>Runner</mainClass>
+								<mainClass>QuerySolarDB</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
@@ -70,7 +109,7 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>Runner</mainClass>
+								<mainClass>QuerySolarDB</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
