--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<version>1.9.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>edu.gsu.dmlab</groupId>
+			<artifactId>lib</artifactId>
+			<version>0.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
