--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>edu.gsu.dmlab</groupId>
 			<artifactId>lib</artifactId>
 			<version>0.0.1</version>
