--- a/deploy/dmlablib/Dockerfile
+++ b/deploy/dmlablib/Dockerfile
@@ -28,4 +28,9 @@ RUN git clone https://ahmetkucuk92:McFqmrpJbzKApmyEBSwF@bitbucket.org/gsudmlab/d
 RUN cd dmlablib/ && \
     git checkout mq && \
     mvn clean install && \
-    mvn install:install-file -Dfile=target/lib-0.0.1-jar-with-dependencies.jar -DgroupId=edu.gsu.dmlab -DartifactId=lib -Dversion=0.0.1 -Dpackaging=jar
+    mvn install:install-file -Dfile=target/lib-0.0.1-jar-with-dependencies.jar -DgroupId=edu.gsu.dmlab -DartifactId=lib -Dversion=0.0.1 -Dpackaging=jar && \
+    cd .. && \ 
+	git clone https://github.com/ahmetkucuk/query-solar-database.git && \ 
+	cd query-solar-database/ && \
+	git checkout test && \
+	mvn clean compile assembly:single
