--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 						</descriptorRefs>
 						<archive>
 							<manifest>
-								<mainClass>QuerySolarDB</mainClass>
+								<mainClass>task.QuerySolarDB</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
@@ -133,7 +133,7 @@
 					<configuration>
 						<archive>
 							<manifest>
-								<mainClass>QuerySolarDB</mainClass>
+								<mainClass>task.TaskSchedulerRunner</mainClass>
 							</manifest>
 						</archive>
 					</configuration>
