--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     taskscheduler:
         image: dmlablib
         volumes:
-            - ./:/code
+            - ${PROJECT_FOLDER}/:/code
         links:
             - rabbitmq
             - postgresql
@@ -56,7 +56,7 @@ services:
     hekpuller:
         image: dmlablib
         volumes:
-            - ../:/code
+            - ${PROJECT_FOLDER}:/code
         links:
             - rabbitmq
             - postgresql
@@ -77,7 +77,7 @@ services:
     imagepuller:
         image: dmlablib
         volumes:
-            - ../../:/code
+            - ${PROJECT_FOLDER}:/code
         links:
             - rabbitmq
             - postgresql
